# nixl

./: .clang-format  .clang-tidy  .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS-CPP.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Doxyfile  ISSUE_MESSAGE.md  LICENSE  README.md  SECURITY.md  meson.build  meson_options.txt  precommit.patch  pyproject.toml  reproduce_ci_build.sh  requirements.txt  taskei-comment-nixl93.md
benchmark/nixlbench/src/benchmark/: benchmark_executor.cpp  benchmark_executor.h  benchmark_run_components.h  benchmark_runtime_sync.cpp  benchmark_runtime_sync.h  meson.build  nixl_storage_allocator.cpp  nixl_storage_allocator.h  transfer_descriptor_strategy.cpp  (+1 more)
benchmark/nixlbench/tests/: backend_option_inventory_test.cpp  benchmark_config_adapter_test.cpp  benchmark_config_test.cpp  benchmark_executor_test.cpp  benchmark_memory_allocator_test.cpp  benchmark_runner_config_test.cpp  meson.build  nixl_backend_params_test.cpp  posix_integration_test.cpp  raw_cli_test.cpp  transfer_descriptor_strategy_test.cpp  worker_config_test.cpp  xfer_bench_config_test.cpp
examples/device/2proc/: CPP_EXAMPLE.md  KERNEL_GUIDE.md  UNIFIED_EXAMPLE.md  meson.build  simple_write_unified.cu
examples/plugins/mockkv/: MOCKKV_ARCHITECTURE.md  README.md  meson.build  mockkv_backend.cpp  mockkv_backend.h  mockkv_plugin.cpp
examples/rust/: Cargo.toml
examples/rust/src/: single_process_example.rs
src/api/gpu/: meson.build  nixl_device.cuh
src/bindings/rust/: Cargo.toml  README.md  build.rs  meson.build  stubs.cpp  wrapper.cpp  wrapper.h
src/plugins/: meson.build
src/plugins/azure_blob/: README.md  azure_blob_backend.cpp  azure_blob_backend.h  azure_blob_client.cpp  azure_blob_client.h  azure_blob_plugin.cpp  meson.build
src/plugins/cuda_gds/: README.md  gds_backend.cpp  gds_backend.h  gds_batch_engine.cpp  gds_batch_engine.h  gds_mt_engine.cpp  gds_mt_engine.h  gds_mt_plugin.cpp  gds_plugin.cpp  gds_utils.cpp  gds_utils.h  meson.build
src/plugins/doca/: README.md  doca_backend.cpp  doca_backend.h  doca_backend_aux.h  doca_plugin.cpp  doca_utils.cpp  kernels.cu  meson.build
src/plugins/doca_memos/: doca_memos_backend.cpp  doca_memos_backend.h  doca_memos_plugin.cpp  doca_memos_progress_engine.cpp  doca_memos_progress_engine.h  meson.build
src/plugins/gds_mt/: gds_mt_backend.cpp  gds_mt_backend.h  gds_mt_plugin.cpp  gds_mt_utils.cpp  gds_mt_utils.h  meson.build
src/plugins/gpunetio/: README.md  gpunetio_backend.cpp  gpunetio_backend.h  gpunetio_backend_aux.h  gpunetio_highlevel.c  gpunetio_highlevel.cpp  gpunetio_kernels.cu  gpunetio_plugin.cpp  gpunetio_utils.cpp  meson.build
src/plugins/gusli/: README.md  gusli_backend.cpp  gusli_backend.h  gusli_plugin.cpp  meson.build
src/plugins/hf3fs/: README.md  hf3fs_backend.cpp  hf3fs_backend.h  hf3fs_log.h  hf3fs_plugin.cpp  hf3fs_utils.cpp  hf3fs_utils.h  meson.build
src/plugins/infinia/: README.md  infinia_backend.cpp  infinia_backend.h  infinia_client.cpp  infinia_client.h  infinia_plugin.cpp  meson.build
src/plugins/kv/: README.md  kv_backend.cpp  kv_backend.h  kv_engine.cpp  kv_engine.h  kv_engine_impl.h  kv_plugin.cpp  kv_req_handle.h  kv_store.h  meson.build
src/plugins/libblkio/: README.md  libblkio_backend.cpp  libblkio_backend.h  libblkio_plugin.cpp  meson.build
src/plugins/libfabric/: README.md  libfabric_backend.cpp  libfabric_backend.h  libfabric_connection.h  libfabric_handshake.cpp  libfabric_plugin.cpp  meson.build
src/plugins/metadata/: etcd_metadata_backend.cpp  etcd_metadata_backend.h  p2p_metadata_backend.cpp  p2p_metadata_backend.h
src/plugins/mooncake/: README.md  meson.build  mooncake_backend.cpp  mooncake_backend.h  mooncake_plugin.cpp
src/plugins/null/: README.md  meson.build  null_backend.cpp  null_backend.h  null_plugin.cpp
src/plugins/obs_obj/: README.md  meson.build  obs_obj_backend.cpp  obs_obj_backend.h  obs_obj_plugin.cpp  obs_obj_s3_client.cpp  obs_obj_s3_client.h
src/plugins/posix/: README.md  aio_queue.cpp  aio_queue.h  async_queue.h  io_queue.cpp  io_queue.h  io_uring_io_queue.cpp  linux_aio_io_queue.cpp  linux_aio_queue.cpp  linux_aio_queue.h  meson.build  posix_aio_io_queue.cpp  posix_backend.cpp  posix_backend.h  posix_plugin.cpp  posix_queue.cpp  posix_queue.h  posix_utils.cpp  posix_utils.h  queue_factory_impl.cpp  queue_factory_impl.h  uring_queue.cpp  uring_queue.h
src/plugins/rados-nkv/: README.md  meson.build  rados_nkv_backend.cpp  rados_nkv_backend.h  rados_nkv_key.cpp  rados_nkv_key.h  rados_nkv_plugin.cpp  rados_nkv_roundtrip_test.cpp  run_roundtrip.sh  run_roundtrip_rados.sh
src/plugins/redis/: README.md  meson.build  redis_backend.cpp  redis_backend.h  redis_client.cpp  redis_client.h  redis_plugin.cpp
src/plugins/spdk_kv/: README.md  ispdk_kv_device.h  spdk_kv_engine.h
src/plugins/telemetry/: README.md  meson.build
src/plugins/uccl/: README.md  meson.build  uccl_backend.cpp  uccl_backend.h  uccl_plugin.cpp
src/plugins/uccl_p2p/: README.md  meson.build  uccl_p2p_backend.cpp  uccl_p2p_backend.h  uccl_p2p_plugin.cpp
src/plugins/ucx/: README.md  config.cpp  config.h  gpu_xfer_req_h.cpp  mem_list.cpp  meson.build  recv_map.h  request.h  rkey.cpp  rkey.h  types.h  ucx_backend.cpp  ucx_backend.h  ucx_enums.cpp  ucx_enums.h  ucx_plugin.cpp  ucx_sgl.cpp  ucx_sgl.h  ucx_utils.cpp  ucx_utils.h
src/plugins/ucx_mo/: meson.build  ucx_mo_backend.cpp  ucx_mo_plugin.cpp
src/plugins/wqskv/: README.md  meson.build  wqskv_backend.cpp  wqskv_backend.h  wqskv_helpers.cpp  wqskv_helpers.h  wqskv_plugin.cpp
src/utils/cuda/: cuda_utils.cpp  cuda_utils.h  meson.build  vmm.cpp  vmm.h
src/utils/libfabric/: libfabric_common.cpp  libfabric_common.h  libfabric_rail.cpp  libfabric_rail.h  libfabric_rail_manager.cpp  libfabric_rail_manager.h  libfabric_topology.cpp  libfabric_topology.h  libfabric_tracepoints.h  meson.build
src/utils/object/: engine_utils.h  meson.build  rdma.cpp  rdma.h  rdma_protocol.h
src/utils/s3_client/: meson.build  s3_client.cpp  s3_client.h  s3_executor.h
(+4712 files in other folders)
