# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["meson-python", "pybind11", "patchelf", "pyyaml", "types-PyYAML", "pytest"]
build-backend = "mesonpy"

[project]
name = 'nixl'
version = '0.5.1'
description = 'NIXL Python API'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
authors = [
  {name = 'NIXL Developers', email = 'nixl-developers@nvidia.com'}
]

dependencies = ["torch", "numpy"]

[tool.isort]
profile = "black"

[tool.meson-python.args]
setup = ['-Dinstall_headers=false']

[tool.pylint]
disable = [
    "C0103", # Class name doesn't conform to PascalCase naming style
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0302", # Too many lines in module
    "W0105", # String statement has no effect (pointless-string-statement)
    "W0511", # TODO (fixme)
    "R0902", # Too many instance attributes
    "R0903", # Too few public methods
    "R0904", # Too many public methods
    "R0912", # Too many branches
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R0915", # Too many statements
    "R0917"  # Too many positional arguments,
]

[tool.pylint.typecheck]
extension-pkg-allow-list = ["nixl._bindings", "nixl._utils"]
# ignored-modules = ["nixl._bindings", "nixl._utils", "nixl"]

[tool.mypy]
explicit_package_bases = true
